# SubagentWorkforce

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps/todo/: goal-draft.md
company_orchestrator/: __init__.py  autonomy.py  bundle_plans.py  bundles.py  change_replan.py  changes.py  cli.py  collaboration.py  constants.py  contract_authority.py  executor.py  feedback.py  filesystem.py  handoffs.py  impact.py  input_lineage.py  live.py  management.py  monitor_api.py  monitoring.py  objective_planner.py  objective_roots.py  observability.py  output_descriptors.py  parallelism.py  planner.py  prompts.py  recovery.py  reports.py  schemas.py  smoke.py  task_graph.py  timeout_policy.py  worktree_manager.py
company_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orchestrator/: TODO.md  monitor-frontend-design.md
orchestrator/phase-overlays/: design.md  discovery.md  mvp-build.md  polish.md
orchestrator/schemas/: activity-live-state.v1.json  autonomy-audit.v1.json  autonomy-state.v1.json  capability-plan.response.v1.json  capability-plan.v1.json  change-impact.v1.json  change-proposal.v1.json  change-request.v1.json  change-request.v2.json  collaboration-handoff.v1.json  collaboration-request.v1.json  completion-report.v1.json  executor-response.v1.json  live-event.v1.json  llm-call.v1.json  objective-map.v1.json  objective-outline.response.v1.json  objective-outline.v1.json  objective-plan.v1.json  output-descriptor.v1.json  phase-plan.v1.json  (+7 more)
tests/: test_monitor_api.py  test_orchestrator.py
(+290 files in other folders)
